--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^8.1.9",
-        "laraish/support": "^1.0"
+        "laraish/contracts": "^1.0"
     },
     "autoload": {
         "psr-4": {
