--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laraish/support",
+    "name": "seven-ario/laraish_support",
     "description": "The Laraish Support Package.",
     "keywords": [
         "framework",
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^8.1.9",
-        "laraish/contracts": "^1.0"
+        "seven-ario/laraish_contracts": "^1.0"
     },
     "autoload": {
         "psr-4": {
