--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     "license": "MIT",
     "homepage": "https://github.com/seven-ario/laraish_support.git",
     "support": {
-        "issues": "https://github.com/laraish/support/issues",
-        "source": "https://github.com/laraish/support"
+        "issues": "https://github.com/seven-ario/laraish_support.git/issues",
+        "source": "https://github.com/seven-ario/laraish_support.git"
     },
     "authors": [
         {
