--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "php": "^8.1.9"
+        "php": "^8.1.9",
+        "seven-ario/laraish_contracts": "^1.0"
     },
     "autoload": {
         "psr-4": {
